# fitPlanes2Fiducials

./: CMakeLists.txt
fiducialPlane2slicer/: CMakeLists.txt  fiducialPlane2slicer.py
fiducialPlane2slicer/Resources/UI/: fiducialPlane2slicer.ui
